# melt

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: main.rs
src/decoder/: README.md  decode.rs  mod.rs  utils.rs
src/encoder/: README.md  encode.rs
src/util/: get_wordlist.rs  mnemonic_to_entropy.rs  mod.rs
