[package]
name = "melt"
version = "0.1.0"
edition = "2021"

[dependencies]
bip39 = "2.0.0"
ed25519 = "2.2.3"
ed25519-dalek = "2.1.1"
hex = "0.4.3"
ssh-key = { version = "0.6.6", features = ["ed25519"] }
tokio = { version = "1.40.0", features = ["full"] }
clap = { version = "4.5.18", features = ["derive"] }
indexmap = "2.5.0"

[profile.release]
lto = true
codegen-units = 1
